ext/mail_parsers/generated/date_time_parser.c

#line 1 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c.rl"

#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c.rl"



#line 9 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
static const int date_time_start = 1;
static const int date_time_first_final = 96;
static const int date_time_error = 0;

static const int date_time_en_comment_tail = 91;
static const int date_time_en_main = 1;


#line 11 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c.rl"

#include <stdlib.h>
#include "../parser.h"

#define RECORD_ACTION(I, FPC) res->actions[action_idx++] = I; res->actions[action_idx++] = (FPC)-s;

int date_time_parse(char *s, int len, struct results *res) {
  int cs;
  int top;
  int stack[16];
  int action_idx = 0;
  char *p = s;
  char *pe = s + len;
  char *eof = s + len;

  
#line 35 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	{
	cs = date_time_start;
	top = 0;
	}

#line 27 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c.rl"
  
#line 43 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 1: goto st1;
		case 0: goto st0;
		case 2: goto st2;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
		case 41: goto st41;
		case 42: goto st42;
		case 43: goto st43;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
		case 48: goto st48;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 96: goto st96;
		case 97: goto st97;
		case 52: goto st52;
		case 53: goto st53;
		case 98: goto st98;
		case 99: goto st99;
		case 54: goto st54;
		case 100: goto st100;
		case 101: goto st101;
		case 55: goto st55;
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 59: goto st59;
		case 60: goto st60;
		case 61: goto st61;
		case 62: goto st62;
		case 63: goto st63;
		case 64: goto st64;
		case 65: goto st65;
		case 66: goto st66;
		case 67: goto st67;
		case 68: goto st68;
		case 69: goto st69;
		case 70: goto st70;
		case 71: goto st71;
		case 72: goto st72;
		case 73: goto st73;
		case 74: goto st74;
		case 75: goto st75;
		case 76: goto st76;
		case 77: goto st77;
		case 78: goto st78;
		case 79: goto st79;
		case 80: goto st80;
		case 81: goto st81;
		case 82: goto st82;
		case 83: goto st83;
		case 84: goto st84;
		case 85: goto st85;
		case 86: goto st86;
		case 87: goto st87;
		case 88: goto st88;
		case 89: goto st89;
		case 90: goto st90;
		case 91: goto st91;
		case 92: goto st92;
		case 93: goto st93;
		case 94: goto st94;
		case 102: goto st102;
		case 95: goto st95;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case 9: goto tr0;
		case 13: goto tr2;
		case 32: goto tr0;
		case 40: goto tr3;
		case 70: goto st71;
		case 77: goto st82;
		case 83: goto st84;
		case 84: goto st86;
		case 87: goto st89;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr4;
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st2;
tr15:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 195 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st2;
		case 13: goto st3;
		case 32: goto st2;
		case 40: goto tr12;
		case 70: goto st71;
		case 77: goto st82;
		case 83: goto st84;
		case 84: goto st86;
		case 87: goto st89;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st6;
	goto st0;
tr2:
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st3;
tr16:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 222 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 9: goto st2;
		case 32: goto st2;
	}
	goto st0;
tr3:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 5; goto st91;} }
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st5;
tr12:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 5; goto st91;} }
	goto st5;
tr17:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 5; goto st91;} }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 255 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr15;
		case 13: goto tr16;
		case 32: goto tr15;
		case 40: goto tr17;
		case 70: goto tr19;
		case 77: goto tr20;
		case 83: goto tr21;
		case 84: goto tr22;
		case 87: goto tr23;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr4:
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st6;
tr18:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 282 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st7;
		case 13: goto st8;
		case 32: goto st7;
		case 40: goto tr26;
		case 65: goto st11;
		case 68: goto st56;
		case 70: goto st58;
		case 74: goto st60;
		case 77: goto st63;
		case 78: goto st65;
		case 79: goto st67;
		case 83: goto st69;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st7;
	goto st0;
tr36:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 308 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st7;
		case 13: goto st8;
		case 32: goto st7;
		case 40: goto tr26;
		case 65: goto st11;
		case 68: goto st56;
		case 70: goto st58;
		case 74: goto st60;
		case 77: goto st63;
		case 78: goto st65;
		case 79: goto st67;
		case 83: goto st69;
	}
	goto st0;
tr37:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 332 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 9: goto st7;
		case 32: goto st7;
	}
	goto st0;
tr26:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 10; goto st91;} }
	goto st10;
tr38:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 10; goto st91;} }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 359 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr36;
		case 13: goto tr37;
		case 32: goto tr36;
		case 40: goto tr38;
		case 65: goto tr39;
		case 68: goto tr40;
		case 70: goto tr41;
		case 74: goto tr42;
		case 77: goto tr43;
		case 78: goto tr44;
		case 79: goto tr45;
		case 83: goto tr46;
	}
	goto st0;
tr39:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 383 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 112: goto st12;
		case 117: goto st55;
	}
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 114 )
		goto st13;
	goto st0;
tr54:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 404 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st13;
		case 13: goto st14;
		case 32: goto st13;
		case 40: goto tr51;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st17;
	goto st0;
tr55:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 422 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	switch( (*p) ) {
		case 9: goto st13;
		case 32: goto st13;
	}
	goto st0;
tr51:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 16; goto st91;} }
	goto st16;
tr56:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 16; goto st91;} }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 449 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr54;
		case 13: goto tr55;
		case 32: goto tr54;
		case 40: goto tr56;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr57;
	goto st0;
tr57:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 467 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	switch( (*p) ) {
		case 9: goto st19;
		case 13: goto st20;
		case 32: goto st19;
		case 40: goto tr61;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st18;
	goto st0;
tr64:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 492 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st19;
		case 13: goto st20;
		case 32: goto st19;
		case 40: goto tr61;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
tr65:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 510 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 9: goto st19;
		case 32: goto st19;
	}
	goto st0;
tr61:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 22; goto st91;} }
	goto st22;
tr66:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 22; goto st91;} }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 537 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr64;
		case 13: goto tr65;
		case 32: goto tr64;
		case 40: goto tr66;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr67;
	goto st0;
tr62:
#line 11 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(8, p) }
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st23;
tr67:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 11 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(8, p) }
#line 23 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(20, p) }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 565 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st24;
	goto st0;
tr73:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 577 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st24;
		case 13: goto st25;
		case 32: goto st24;
		case 40: goto tr70;
		case 58: goto st28;
	}
	goto st0;
tr74:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 594 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 9: goto st24;
		case 32: goto st24;
	}
	goto st0;
tr70:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 27; goto st91;} }
	goto st27;
tr75:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 27; goto st91;} }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 621 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr73;
		case 13: goto tr74;
		case 32: goto tr73;
		case 40: goto tr75;
		case 58: goto tr76;
	}
	goto st0;
tr76:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st28;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
#line 638 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st28;
		case 13: goto st29;
		case 32: goto st28;
		case 40: goto tr78;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st32;
	goto st0;
tr81:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 656 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 9: goto st28;
		case 32: goto st28;
	}
	goto st0;
tr78:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 31; goto st91;} }
	goto st31;
tr82:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 31; goto st91;} }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 683 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr76;
		case 13: goto tr81;
		case 32: goto tr76;
		case 40: goto tr82;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr83;
	goto st0;
tr83:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 701 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 9: goto st34;
		case 13: goto st35;
		case 32: goto st34;
		case 40: goto tr87;
		case 58: goto st38;
	}
	goto st0;
tr95:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 725 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st34;
		case 13: goto st35;
		case 32: goto st34;
		case 40: goto tr87;
		case 43: goto st48;
		case 45: goto st48;
		case 58: goto st38;
		case 67: goto st99;
		case 69: goto st99;
		case 71: goto st100;
		case 77: goto st99;
		case 80: goto st99;
		case 85: goto st101;
	}
	if ( (*p) < 75 ) {
		if ( 65 <= (*p) && (*p) <= 73 )
			goto st96;
	} else if ( (*p) > 90 ) {
		if ( (*p) > 105 ) {
			if ( 107 <= (*p) && (*p) <= 122 )
				goto st96;
		} else if ( (*p) >= 97 )
			goto st96;
	} else
		goto st96;
	goto st0;
tr96:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 761 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st36;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 9: goto st34;
		case 32: goto st34;
	}
	goto st0;
tr87:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 37; goto st91;} }
	goto st37;
tr97:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 37; goto st91;} }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 788 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr95;
		case 13: goto tr96;
		case 32: goto tr95;
		case 40: goto tr97;
		case 58: goto tr98;
	}
	goto st0;
tr98:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 805 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st38;
		case 13: goto st39;
		case 32: goto st38;
		case 40: goto tr100;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st42;
	goto st0;
tr103:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 823 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 9: goto st38;
		case 32: goto st38;
	}
	goto st0;
tr100:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 41; goto st91;} }
	goto st41;
tr104:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 41; goto st91;} }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 850 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr98;
		case 13: goto tr103;
		case 32: goto tr98;
		case 40: goto tr104;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr105;
	goto st0;
tr105:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
#line 868 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	switch( (*p) ) {
		case 9: goto st44;
		case 13: goto st45;
		case 32: goto st44;
		case 40: goto tr109;
	}
	goto st0;
tr111:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 891 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto st44;
		case 13: goto st45;
		case 32: goto st44;
		case 40: goto tr109;
		case 43: goto st48;
		case 45: goto st48;
		case 67: goto st99;
		case 69: goto st99;
		case 71: goto st100;
		case 77: goto st99;
		case 80: goto st99;
		case 85: goto st101;
	}
	if ( (*p) < 75 ) {
		if ( 65 <= (*p) && (*p) <= 73 )
			goto st96;
	} else if ( (*p) > 90 ) {
		if ( (*p) > 105 ) {
			if ( 107 <= (*p) && (*p) <= 122 )
				goto st96;
		} else if ( (*p) >= 97 )
			goto st96;
	} else
		goto st96;
	goto st0;
tr112:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 926 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	if ( (*p) == 10 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 9: goto st44;
		case 32: goto st44;
	}
	goto st0;
tr109:
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 47; goto st91;} }
	goto st47;
tr113:
#line 8 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/c_actions.rl"
	{ RECORD_ACTION(5, p) }
#line 5 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/../../../lib/mail/parsers/ragel/common.rl"
	{ {stack[top++] = 47; goto st91;} }
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 953 "/home/bpot/src/Dist/GH/mikel/mail/ext/mail_parsers/generated/date_time_parser.c"
	switch( (*p) ) {
		case 9: goto tr111;
		case 13: goto tr112;
		case 32: goto tr111;
		case 40: goto tr113;
	}
	goto st0;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st49;
	goto st0;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st50;
	goto st0;
st50:
